# multi-channel-marketing-analytics

./: .gitignore  README.md  __init__.py  attribution.py  config.py  logger.py  ml_models.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bi/looker_studio/: README.md  bigquery_marts.sql
