[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-channel-marketing-analytics"
version = "1.0.0"
description = "Customer acquisition, engagement, and retention analytics platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WillTran", email = "willtran112358@users.noreply.github.com"},
]
keywords = ["marketing", "analytics", "attribution", "churn-prediction", "customer-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "apache-airflow>=2.7.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/willtran112358/multi-channel-marketing-analytics"
Repository = "https://github.com/willtran112358/multi-channel-marketing-analytics.git"
Issues = "https://github.com/willtran112358/multi-channel-marketing-analytics/issues"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
